--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -152,6 +152,44 @@ html, body {
   overflow: auto;
 }
 
+#docs-chrome {
+  display: none;
+}
+.docs-material {
+  display: none;
+}
+
+/* CompanySelector.module.css */
+.shimmer {
+  position: relative;
+  overflow: hidden;
+  background-color: #e5e7eb;
+}
+
+.shimmer::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform: translateX(-100%);
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0,
+    rgba(255, 255, 255, 0.2) 20%,
+    rgba(255, 255, 255, 0.5) 60%,
+    rgba(255, 255, 255, 0)
+  );
+  animation: shimmer 1.5s infinite;
+  content: '';
+}
+
+@keyframes shimmer {
+  100% {
+    transform: translateX(100%);
+  }
+}
+
 /* Utility classes for the custom colors */
 .bg-ceramic-50 { background-color: var(--ceramic-50); }
 .bg-gray-150 { background-color: var(--gray-150); }
