fixed add company in company selection

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,93 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@keyframes shimmerAnimation {
+  0% {
+    background-position: -1000px 0;
+  }
+  100% {
+    background-position: 1000px 0;
+  }
+}
+
+.shimmer-background {
+  background: #f6f6f6;
+  position: relative;
+  overflow: hidden;
+}
+
+.scrollbar-hidden {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer and Edge */
+}
+
+.shimmer-background::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform: translateX(-100%);
+  background-image: linear-gradient(
+          90deg,
+          rgba(255, 255, 255, 0) 0,
+          rgba(255, 255, 255, 0.2) 20%,
+          rgba(255, 255, 255, 0.5) 60%,
+          rgba(255, 255, 255, 0)
+  );
+  animation: shimmerAnimation 2s infinite;
+  content: '';
+}
+
+.shimmer-line {
+  background: #eaeaea;
+  border-radius: 4px;
+  position: relative;
+  overflow: hidden;
+}
+
+.shimmer-line::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform: translateX(-100%);
+  background-image: linear-gradient(
+          90deg,
+          rgba(255, 255, 255, 0) 0,
+          rgba(255, 255, 255, 0.2) 20%,
+          rgba(255, 255, 255, 0.5) 60%,
+          rgba(255, 255, 255, 0)
+  );
+  animation: shimmerAnimation 2s infinite;
+  content: '';
+}
+
+.shimmer-circle {
+  background: #eaeaea;
+  border-radius: 50%;
+  position: relative;
+  overflow: hidden;
+}
+
+.shimmer-circle::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform: translateX(-100%);
+  background-image: linear-gradient(
+          90deg,
+          rgba(255, 255, 255, 0) 0,
+          rgba(255, 255, 255, 0.2) 20%,
+          rgba(255, 255, 255, 0.5) 60%,
+          rgba(255, 255, 255, 0)
+  );
+  animation: shimmerAnimation 2s infinite;
+  content: '';
+}
 
 /* globals.css - converted from Tailwind config */
 
